# PointCloudPrep

./: Pipfile  cloudDistance.py  plyReader.py  setup.py  test.py
centerZ/: CMakeLists.txt  README.md  centerZ.cpp
cloudDist/: README.md  cloudDistance.py  test.py
filtering/: README.md  statistical_removal.cpp
orientation_normalization/: CMakeLists.txt  README.md  normalize.cpp
